# simplelog.rs.pr

./: Cargo.toml
examples/: custom_colors.rs  default_colors.rs  rgb_colors.rs  usage.rs
src/: config.rs  lib.rs
src/loggers/: comblog.rs  logging.rs  simplelog.rs  termlog.rs  testlog.rs  writelog.rs
