[package]
name = "simplelog_pr"
version = "0.12.0"
edition = "2018"
authors = ["Drakulix <github@drakulix.de>", "Zizheng Guo <gzz_2000@126.com>"]
description = "A simple and easy-to-use logging facility for Rust's log crate, designed for same flavor as PKU EDA PR."
repository = "https://github.com/gzz2000/simplelog.rs.pr"
keywords = ["log", "simplelog", "filelog", "logging"]
license = "MIT OR Apache-2.0"
include = [
    "**/*.rs",
    "Cargo.toml",
    "CHANGELOG.md",
    "README.md",
    "LICENSE.APACHE2",
    "LICENSE.MIT",
]

[features]
test = []
default = ["termcolor", "local-offset"]
local-offset = ["time/local-offset"]

[dependencies]
log = { version = "0.4.*", features = ["std"] }
termcolor = { version = "1.1", optional = true }
paris = { version = "~1.5.12", optional = true }
ansi_term = { version = "0.12", optional = true }
time = { version = "0.3.7", features = ["formatting", "macros"] }
